PROJECT(netgestalt)

#The CMake Minimum version that is required.
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#Adding src directory to the project
ADD_SUBDIRECTORY(src)
SET(CMAKE_INSTALL_PREFIX "bin")

SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "netgestalt")
SET(CPACK_PACKAGE_VENDOR "Zhiao Shi, Bing Zhang")
#SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "1")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_GENERATOR "TGZ")
SET(CPACK_SOURCE_GENERATOR "TGZ")
set(CPACK_SOURCE_PACKAGE_FILE_NAME
  "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")
SET(CPACK_SOURCE_IGNORE_FILES
"/bin/"
"/test/"
".*cmake$"
"/CMakeFiles/"
"Makefile$"
"CMakeCache"
"install_"
${CPACK_SOURCE_IGNORE_FILES}
)
INCLUDE(CPack)
